cmake_minimum_required (VERSION 2.8.7)
project (LeetCode)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O0")


# 初级算法 - 数组
# add_executable(Array_1_removeDuplicates Array_1_removeDuplicates.cpp)
# add_executable(Array_3_rotate Array_3_rotate.cpp)
# add_executable(Array_4_containsDuplicate Array_4_containsDuplicate.cpp)
# add_executable(Array_5_singleNumber Array_5_singleNumber.cpp)
# add_executable(Array_7_plusOne Array_7_plusOne.cpp)
# add_executable(Array_8_moveZeroes Array_8_moveZeroes.cpp)
# add_executable(Array_10_rotateImage Array_10_rotateImage.cpp)

# 初级算法 - 链表
# add_executable(List_1_deleteNode List_1_deleteNode.cpp)
# add_executable(List_2_removeNthFromEnd List_2_removeNthFromEnd.cpp)
# add_executable(List_4_mergeTwoLists List_4_mergeTwoLists.cpp)
# add_executable(List_5_isPalindrome List_5_isPalindrome.cpp)

# 初级算法 - 排序和搜索
# add_executable(SortAndSearch_1_merge SortAndSearch_1_merge.cpp)
# add_executable(SortAndSearch_2_firstBadVersion SortAndSearch_2_firstBadVersion.cpp)

# 初级算法 - 设计
# add_executable(Design_2_minStack Design_2_minStack.cpp)

# 初级算法 - 字符串
# add_executable(String_1_reverseString String_1_reverseString.cpp)
# add_executable(String_3_firstUniqChar String_3_firstUniqChar.cpp)
# add_executable(String_4_isAnagram String_4_isAnagram.cpp)
# add_executable(String_9_longestCommonPrefix String_9_longestCommonPrefix.cpp)

# 初级算法 - 树
# add_executable(Tree_1_maxDepth_T104 Tree_1_maxDepth_T104.cpp)
# add_executable(Tree_2_isValidBST_T98 Tree_2_isValidBST_T98.cpp)
# add_executable(Tree_3_isSymmetric_T101 Tree_3_isSymmetric_T101.cpp)
# add_executable(Tree_5_sortedArrayToBST_T108 Tree_5_sortedArrayToBST_T108.cpp)

# 初级算法 - 动态规划
add_executable(DynamicProgramming_1_climbStairs_T70 DynamicProgramming_1_climbStairs_T70.cpp)
add_executable(DynamicProgramming_3_maxSubArray_T53 DynamicProgramming_3_maxSubArray_T53.cpp)
add_executable(DynamicProgramming_4_rob_T198 DynamicProgramming_4_rob_T198.cpp)



# 排序
# add_executable(QuikSort QuikSort.cpp)



# add_executable (T1 T1.cpp)
# add_executable (T2 T2.cpp)
# add_executable (T9 T9.cpp)
# add_executable (T28 T28.cpp)
# add_executable (T83 T83.cpp)
# add_executable (T94 T94.cpp)
# add_executable (T106 T106.cpp)
# add_executable (T107 T107.cpp)
# add_executable (T121 T121.cpp)
# add_executable (T122 T122.cpp)
# add_executable (T125 T125.cpp)
# add_executable (T141 T141.cpp)
# add_executable (T203 T203.cpp)
add_executable (T206 T206.cpp)
# add_executable (T442 T442.cpp)
# add_executable (T876 T876.cpp)
