cmake_minimum_required (VERSION 2.8.7)
project (leekcode_2023)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O0")
include_directories(base)


# 初级算法 - 数组
# add_executable(Array_1_removeDuplicates_T26 Array_1_removeDuplicates_T26.cpp)
# add_executable(Array_3_rotate_T189 Array_3_rotate_T189.cpp)
# add_executable(Array_4_containsDuplicate_T217 Array_4_containsDuplicate_T217.cpp)
# add_executable(Array_5_singleNumber_T136 Array_5_singleNumber_T136.cpp)
# add_executable(Array_7_plusOne_T66 Array_7_plusOne_T66.cpp)
# add_executable(Array_8_moveZeroes_T283 Array_8_moveZeroes_T283.cpp)
# add_executable(Array_10_rotateImage_T48 Array_10_rotateImage_T48.cpp)


# 初级算法 - 链表
# add_executable(List_1_deleteNode_T237 List_1_deleteNode_T237.cpp)
# add_executable(List_2_removeNthFromEnd_T19 List_2_removeNthFromEnd_T19.cpp)
# add_executable(List_4_mergeTwoLists_T21 List_4_mergeTwoLists_T21.cpp)
# add_executable(List_5_isPalindrome_T234 List_5_isPalindrome_T234.cpp)

# 初级算法 - 排序和搜索
# add_executable(SortAndSearch_1_merge SortAndSearch_1_merge.cpp)
# add_executable(SortAndSearch_2_firstBadVersion SortAndSearch_2_firstBadVersion.cpp)

# 初级算法 - 设计
# add_executable(Design_2_minStack Design_2_minStack.cpp)

# 初级算法 - 字符串
# add_executable(String_1_reverseString_T344 String_1_reverseString_T344.cpp)
# add_executable(String_3_firstUniqChar_T387 String_3_firstUniqChar_T387.cpp)
# add_executable(String_4_isAnagram_T242 String_4_isAnagram_T242.cpp)
# add_executable(String_9_longestCommonPrefix_T14 String_9_longestCommonPrefix_T14.cpp)

# 初级算法 - 树
# add_executable(Tree_1_maxDepth_T104 Tree_1_maxDepth_T104.cpp)
# add_executable(Tree_2_isValidBST_T98 Tree_2_isValidBST_T98.cpp)
# add_executable(Tree_3_isSymmetric_T101 Tree_3_isSymmetric_T101.cpp)
# add_executable(Tree_5_sortedArrayToBST_T108 Tree_5_sortedArrayToBST_T108.cpp)

# 初级算法 - 动态规划
# add_executable(DynamicProgramming_1_climbStairs_T70 DynamicProgramming_1_climbStairs_T70.cpp)
# add_executable(DynamicProgramming_3_maxSubArray_T53 DynamicProgramming_3_maxSubArray_T53.cpp)
# add_executable(DynamicProgramming_4_rob_T198 DynamicProgramming_4_rob_T198.cpp)

# 初级算法 - 其他
# add_executable(Other_1_hammingWeight_T191 Other_1_hammingWeight_T191.cpp)
# add_executable(Other_2_hammingDistance_T461 Other_2_hammingDistance_T461.cpp)
# add_executable(Other_3_reverseBits_T190 Other_3_reverseBits_T190.cpp)
# add_executable(Other_4_generate_T118 Other_4_generate_T118.cpp)
# add_executable(Other_5_isValid_T20 Other_5_isValid_T20.cpp)
# add_executable(Other_6_missingNumber_T268 Other_6_missingNumber_T268.cpp)

# 初级算法 - 数学
# add_executable(Math_1_FizzBuzz_T412 Math_1_FizzBuzz_T412.cpp)
# add_executable(Math_2_countPrimes_T204 Math_2_countPrimes_T204.cpp)


# 排序
# add_executable(QuikSort QuikSort.cpp)



# add_executable (T1 T1.cpp)
# add_executable (T2 T2.cpp)
# add_executable (T9 T9.cpp)
# add_executable (T28 T28.cpp)
# add_executable (T59 T59.cpp)
# add_executable (T83 T83.cpp)
# add_executable (T88 T88.cc)
add_executable (T26 T26.cc)
add_executable (T27 T27.cc)
# add_executable (T94 T94.cpp)
# add_executable (T106 T106.cpp)
# add_executable (T107 T107.cpp)
# add_executable (T121 T121.cpp)
# add_executable (T122 T122.cpp)
# add_executable (T125 T125.cpp)
# add_executable (T141 T141.cpp)
# add_executable (T203 T203.cpp)
# add_executable (T206 T206.cpp)
# add_executable (T442 T442.cpp)
# add_executable (T876 T876.cpp)
